[package]
name = "twirl"
description = "Access the Twitch API with ease."
version = "0.1.0"
authors = ["Daniel Fischer <daniel@d-fischer.dev>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/d-fischer/twirl"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
connect = "0.1.1"
ffi-support = "0.3.5"
futures-preview = "0.3.0-alpha.18"
futures-util-preview = "0.3.0-alpha.18"
http = "0.1.18"
hyper = { version = "0.13.0-alpha.2", features = ["unstable-stream"] }
hyper-tls = "0.4.0-alpha.2"
lazy_static = "1.4.0"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
simple-error = "0.2.1"
tokio = "0.2.0-alpha.5"
url = "2.1.0"

[lib]
crate-type = ["cdylib", "rlib"]